--- a/speech_assistant_tuto/templates/recorder.html
+++ b/speech_assistant_tuto/templates/recorder.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="static/recorder.css">
   </head>
   <body>
-    <h1>Hola mundo</h1>
-
     <div class="container">
 
         <div class="row mt-3 px-3">
             <div class="col-12 text-center">
                 <button type="button" class="btn-record btn-record-green" id="record" onclick="record()">
-                    <img class="mic-img" src="static/img/microphone.png" />
+                    <img class="mic-img" src="static/img/perla_logo.png" />
                 </button>
                 <button type="button" class="btn-record btn-record-red" id="stop" onclick="stop()" style="display:none">
-                    <img class="mic-img" id="record-stop-label" src="static/img/microphone.png" />
+                    <img class="mic-img" id="record-stop-label" src="static/img/perla_logo.png" />
                     <span id="record-stop-loading" style="display: none"><span class="spinner-border spinner-border-sm record-spinner" role="status" aria-hidden="true"></span></span>
                 </button>
             </div>
